syntax = "proto3";

package air_conditioner_service;

service AirConditionerService {
  rpc turnOnAirConditioner (AirConditionerRequest) returns (Status);
  rpc turnOffAirConditioner (AirConditionerRequest) returns (Status);
  rpc aumentarTemp (AirConditionerRequest) returns (Status);
  rpc diminuirTemp (AirConditionerRequest) returns (Status);
  
}

message AirConditionerRequest {
  // Se houver campos específicos necessários para as solicitações, você pode defini-los aqui.
}

message Status {
  string message = 1;
}
